Extract markIfDone function in Parser for code quality